[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/WFC_Based_Gen/scripts/main_panel.gd" type="Script" id=1]
[ext_resource path="res://default_env.tres" type="Environment" id=2]
[ext_resource path="res://addons/WFC_Based_Gen/scripts/TileCreator.gd" type="Script" id=3]
[ext_resource path="res://addons/WFC_Based_Gen/scripts/SwapArea.gd" type="Script" id=4]

[sub_resource type="World" id=3]
environment = ExtResource( 2 )
fallback_environment = ExtResource( 2 )

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SphereMesh" id=5]
radius = 0.1
height = 1.0
radial_segments = 16
rings = 8

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.196078, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 0.321569, 1, 1 )

[node name="MainPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="ViewHolder" type="ViewportContainer" parent="."]
anchor_left = 0.562
anchor_right = 1.0
anchor_bottom = 0.427
margin_left = 0.511963
margin_bottom = -0.200012
rect_min_size = Vector2( 400, 200 )
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewHolder"]
size = Vector2( 1024, 600 )
own_world = true
world = SubResource( 3 )
handle_input_locally = false
render_target_update_mode = 3

[node name="MainModel" type="MeshInstance" parent="ViewHolder/Viewport"]
mesh = SubResource( 1 )
material/0 = null

[node name="X" type="MeshInstance" parent="ViewHolder/Viewport"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 3, 0, 0 )
material_override = SubResource( 4 )
mesh = SubResource( 5 )
material/0 = null

[node name="Y" type="MeshInstance" parent="ViewHolder/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 5 )
material/0 = null

[node name="Z" type="MeshInstance" parent="ViewHolder/Viewport"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 3 )
material_override = SubResource( 7 )
mesh = SubResource( 5 )
material/0 = null

[node name="Model_x_plus" type="MeshInstance" parent="ViewHolder/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )

[node name="Model_x_minus" type="MeshInstance" parent="ViewHolder/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0 )

[node name="Model_y_plus" type="MeshInstance" parent="ViewHolder/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Model_y_minus" type="MeshInstance" parent="ViewHolder/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )

[node name="Model_z_plus" type="MeshInstance" parent="ViewHolder/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="Model_z_minus" type="MeshInstance" parent="ViewHolder/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="Spatial" type="Spatial" parent="ViewHolder/Viewport"]
transform = Transform( -0.707106, 0, -0.707106, 0, 1, 0, 0.707106, 0, -0.707106, 0, 0, 0 )

[node name="Camera" type="Camera" parent="ViewHolder/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 4 )

[node name="OpenModel" type="FileDialog" parent="."]
margin_right = 320.0
margin_bottom = 320.0
window_title = "Otwórz plik"
resizable = true
mode = 0
filters = PoolStringArray( "*.obj", "*.tres", "*.res" )

[node name="OpenFile" type="FileDialog" parent="."]
margin_right = 320.0
margin_bottom = 320.0
window_title = "Otwórz plik"
resizable = true
mode = 0
filters = PoolStringArray( "*.wgts" )

[node name="SaveFile" type="FileDialog" parent="."]
margin_right = 320.0
margin_bottom = 320.0
window_title = "Zapisz plik"
resizable = true
filters = PoolStringArray( "*.wgts" )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.312
anchor_top = 0.027
anchor_right = 0.43
anchor_bottom = 0.4
margin_left = 0.511993
margin_top = -0.200001
margin_right = -0.320007
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetModelBtn" type="Button" parent="VBoxContainer"]
margin_right = 120.0
margin_bottom = 20.0
text = "Set Model"

[node name="ClearModelBtn" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 120.0
margin_bottom = 44.0
focus_mode = 0
enabled_focus_mode = 0
text = "Clear Model"

[node name="rotN" type="Label" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 120.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 30 )
text = "Cur Rotation:"
align = 1
autowrap = true

[node name="RotFrontBtn" type="Button" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 120.0
margin_bottom = 102.0
text = "Rotation Front"

[node name="RotRightBtn" type="Button" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 120.0
margin_bottom = 126.0
text = "Rotation Right"

[node name="RotLeftBtn" type="Button" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 120.0
margin_bottom = 150.0
text = "Rotation Left"

[node name="RotBackBtn" type="Button" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 120.0
margin_bottom = 174.0
text = "Rotation Back"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.445
anchor_top = 0.027
anchor_right = 0.562
anchor_bottom = 0.4
margin_left = 0.319977
margin_top = -0.200001
margin_right = 0.512024

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 120.0
margin_bottom = 31.0
text = "Distance Between Sides"
align = 1
valign = 1
autowrap = true

[node name="Panel" type="Panel" parent="VBoxContainer2"]
margin_top = 35.0
margin_right = 120.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 23 )

[node name="Distance" type="Label" parent="VBoxContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "2"
align = 1
valign = 1
clip_text = true

[node name="RiseDistBtn2" type="Button" parent="VBoxContainer2"]
margin_top = 62.0
margin_right = 120.0
margin_bottom = 82.0
text = "Rise by .1"

[node name="RiseDistBtn" type="Button" parent="VBoxContainer2"]
margin_top = 86.0
margin_right = 120.0
margin_bottom = 106.0
text = "Rise by 1"

[node name="LowerDistBtn" type="Button" parent="VBoxContainer2"]
margin_top = 110.0
margin_right = 120.0
margin_bottom = 130.0
focus_mode = 0
enabled_focus_mode = 0
text = "Lower By 1"

[node name="LowerDistBtn2" type="Button" parent="VBoxContainer2"]
margin_top = 134.0
margin_right = 120.0
margin_bottom = 154.0
focus_mode = 0
enabled_focus_mode = 0
text = "Lower By .1"

[node name="TileCreator" type="Control" parent="."]
anchor_top = 0.587
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.200012
script = ExtResource( 3 )

[node name="ItemListCont" type="ScrollContainer" parent="TileCreator"]
anchor_top = 0.129
anchor_right = 0.148
anchor_bottom = 1.0
margin_top = 0.00799751
margin_right = 0.447998

[node name="ItemList" type="ItemList" parent="TileCreator/ItemListCont"]
margin_right = 152.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true

[node name="TileName" type="LineEdit" parent="TileCreator"]
anchor_right = 0.148
anchor_bottom = 0.097
margin_right = 0.447998
margin_bottom = -0.0559998
max_length = 19
placeholder_text = "Tile Name"

[node name="CreateTileBtn" type="Button" parent="TileCreator"]
anchor_left = 0.164
anchor_right = 0.25
anchor_bottom = 0.097
margin_left = 0.0639954
margin_bottom = -0.0559998
focus_mode = 0
enabled_focus_mode = 0
text = "Create"

[node name="DeleteTileBtn" type="Button" parent="TileCreator"]
anchor_left = 0.164
anchor_top = 0.258
anchor_right = 0.25
anchor_bottom = 0.355
margin_left = 0.0639954
margin_top = 0.015995
margin_bottom = -0.0400085
focus_mode = 0
enabled_focus_mode = 0
text = "Delete Tile"

[node name="CurEdit" type="Label" parent="TileCreator"]
anchor_left = 0.164
anchor_top = 0.129
anchor_right = 0.367
anchor_bottom = 0.226
margin_left = 0.0639954
margin_top = 0.00799751
margin_right = 0.191986
margin_bottom = -0.0480042
valign = 1

[node name="Panel" type="Panel" parent="TileCreator/CurEdit"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SwapArea" type="Control" parent="TileCreator"]
anchor_left = 0.455
anchor_top = 0.387
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.320007
margin_top = 0.0239944
script = ExtResource( 4 )

[node name="OptionButton" type="OptionButton" parent="TileCreator/SwapArea"]
anchor_right = 0.14
anchor_bottom = 0.158
margin_right = -0.176003
margin_bottom = -0.0160007
text = "x plus"
items = [ "x plus", null, false, 0, null, "x minus", null, false, 1, null, "y plus", null, false, 2, null, "y minus", null, false, 3, null, "z plus", null, false, 4, null, "z minus", null, false, 5, null ]
selected = 0

[node name="Save" type="Button" parent="TileCreator/SwapArea"]
anchor_left = 0.169
anchor_right = 0.255
anchor_bottom = 0.158
margin_left = -0.369644
margin_right = -0.392044
margin_bottom = -0.0160007
focus_mode = 0
enabled_focus_mode = 0
text = "Save"

[node name="Label" type="Label" parent="TileCreator/SwapArea"]
anchor_top = 0.211
anchor_right = 0.254
anchor_bottom = 0.368
margin_top = -0.0720024
margin_right = 0.166382
margin_bottom = 0.0639954
text = "Remember To Save"
align = 1
valign = 1

[node name="Label2" type="Label" parent="TileCreator/SwapArea"]
anchor_top = -0.316
anchor_right = 0.312
anchor_bottom = -0.053
margin_left = -2.0
margin_top = 0.0320015
margin_right = -0.22081
margin_bottom = 0.0560007
text = "Basic Map Gen only needs
n plus setted"
align = 1
valign = 1
autowrap = true

[node name="SyncTiles" type="CheckBox" parent="TileCreator/SwapArea"]
anchor_left = -0.004
anchor_top = 0.421
anchor_right = 0.24
anchor_bottom = 0.579
margin_left = 0.2336
margin_top = 0.00799561
margin_right = -0.0160065
margin_bottom = -0.00801086
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Sync Tiles"

[node name="NotSelected" type="ScrollContainer" parent="TileCreator/SwapArea"]
anchor_left = 0.384
anchor_right = 0.655
anchor_bottom = 1.0
margin_left = -0.425613
margin_right = 0.247955

[node name="ItemList" type="ItemList" parent="TileCreator/SwapArea/NotSelected"]
margin_right = 152.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
auto_height = true

[node name="Selected" type="ScrollContainer" parent="TileCreator/SwapArea"]
anchor_left = 0.728
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.515228
margin_right = -0.400024

[node name="ItemList" type="ItemList" parent="TileCreator/SwapArea/Selected"]
margin_right = 152.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
auto_height = true

[node name="Select" type="Button" parent="TileCreator/SwapArea"]
anchor_left = 0.655
anchor_top = 0.211
anchor_right = 0.728
anchor_bottom = 0.368
margin_left = 0.247955
margin_top = -0.0720024
margin_right = -0.515228
margin_bottom = 0.0639954
text = ">>"

[node name="UnSelect" type="Button" parent="TileCreator/SwapArea"]
anchor_left = 0.655
anchor_top = 0.474
anchor_right = 0.727
anchor_bottom = 0.632
margin_left = 0.247955
margin_top = -0.0480042
margin_right = 0.0431519
margin_bottom = -0.064003
text = "<<"

[node name="FileMenu" type="MenuButton" parent="."]
anchor_right = 0.062
anchor_bottom = 0.04
margin_right = 0.511997
margin_bottom = -1.90735e-06
text = "File"
items = [ "Open", null, 0, false, false, 0, 0, null, "", false, "Save", null, 0, false, false, 1, 0, null, "", false, "Save As", null, 0, false, false, 2, 0, null, "", false ]

[connection signal="confirmed" from="OpenModel" to="." method="_on_OpenModel_confirmed"]
[connection signal="file_selected" from="OpenModel" to="." method="_on_OpenModel_file_selected"]
[connection signal="confirmed" from="OpenFile" to="." method="_on_OpenFile_confirmed"]
[connection signal="file_selected" from="OpenFile" to="." method="_on_OpenFile_file_selected"]
[connection signal="confirmed" from="SaveFile" to="." method="_on_SaveFile_confirmed"]
[connection signal="file_selected" from="SaveFile" to="." method="_on_SaveFile_file_selected"]
[connection signal="pressed" from="VBoxContainer/SetModelBtn" to="." method="_on_SetModelBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/ClearModelBtn" to="." method="_on_ClearModelBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/RotFrontBtn" to="TileCreator" method="set_tile_orientation" binds= [ "front" ]]
[connection signal="pressed" from="VBoxContainer/RotRightBtn" to="TileCreator" method="set_tile_orientation" binds= [ "right" ]]
[connection signal="pressed" from="VBoxContainer/RotLeftBtn" to="TileCreator" method="set_tile_orientation" binds= [ "left" ]]
[connection signal="pressed" from="VBoxContainer/RotBackBtn" to="TileCreator" method="set_tile_orientation" binds= [ "back" ]]
[connection signal="pressed" from="VBoxContainer2/RiseDistBtn2" to="." method="_on_RiseDistBtn2_pressed"]
[connection signal="pressed" from="VBoxContainer2/RiseDistBtn" to="." method="_on_RiseDistBtn_pressed"]
[connection signal="pressed" from="VBoxContainer2/LowerDistBtn" to="." method="_on_LowerDistBtn_pressed"]
[connection signal="pressed" from="VBoxContainer2/LowerDistBtn2" to="." method="_on_LowerDistBtn2_pressed"]
[connection signal="item_selected" from="TileCreator/ItemListCont/ItemList" to="TileCreator" method="_on_ItemList_item_selected"]
[connection signal="nothing_selected" from="TileCreator/ItemListCont/ItemList" to="TileCreator" method="_on_ItemList_nothing_selected"]
[connection signal="pressed" from="TileCreator/CreateTileBtn" to="TileCreator" method="create_tile"]
[connection signal="pressed" from="TileCreator/DeleteTileBtn" to="TileCreator" method="DeleteTile"]
[connection signal="item_selected" from="TileCreator/SwapArea/OptionButton" to="TileCreator" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="TileCreator/SwapArea/Save" to="TileCreator" method="_on_Save_pressed"]
[connection signal="pressed" from="TileCreator/SwapArea/Select" to="TileCreator/SwapArea" method="select"]
[connection signal="pressed" from="TileCreator/SwapArea/UnSelect" to="TileCreator/SwapArea" method="un_select"]
